fix: remove gap

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -8,7 +8,6 @@
 .form__content {
   display: flex;
   flex-wrap: wrap;
-  gap: 42px;
   max-width: 874px;
   padding-top: 38px;
 }
@@ -21,9 +20,9 @@
   display: flex;
   flex-direction: column;
   margin: 0 42px 53px 0;
-  font-family: Bellota Text;
+  font-family: Bellota;
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.2;
   text-align: left;
   color: #928b7b;
@@ -39,14 +38,17 @@
 
 .form__input::placeholder {
   color: #ffffff;
-  font-family: Bellota Text;
+  font-family: Bellota;
   font-size: 24px;
-  font-weight: 700;
-  line-height: 30.19px;
+  font-weight: 500;
+  line-height: 1.2;
   text-align: left;
+  padding-left: 20px;
 }
 
 .form__input-message {
+  position: relative;
+
   margin-top: 4px;
   width: 100%;
   height: 320px;
@@ -55,11 +57,14 @@
 }
 
 .form__input-message::placeholder {
+  position: absolute;
+  top: 23px;
   color: #ffffff;
-  font-family: Bellota Text;
+  font-family: Bellota;
   font-size: 24px;
-  font-weight: 700;
-  line-height: 30.19px;
+  font-weight: 500;
+  line-height: 1.2;
+  padding-left: 20px;
 }
 
 .form__submit {
@@ -68,7 +73,7 @@
   margin: 21px 0 0 auto;
   border: none;
   border-radius: 25px;
-  font-family: Bellota Text;
+  font-family: Bellota;
   font-size: 24px;
   font-weight: 700;
   line-height: 30.19px;
